--- a/LECTURE8.html
+++ b/LECTURE8.html
@@ -459,20 +459,39 @@ div.tocify {
 
 <div id="upcoming-midterm-exam" class="section level3">
 <h3>Upcoming midterm exam</h3>
-<p><strong>when and where</strong> The first midterm exam (out of two) is coming up Monday <strong>March 15</strong>. You will have the whole 50 minute class period to take the exam. The exam will be online (of course) and administered on Top Hat.</p>
+<p><strong>when and where</strong> The first midterm exam (out of two) is coming up Wednesday <strong>March 9</strong>. You will have the whole 50 minute class period to take the exam. The exam will be on paper/scantron this year.</p>
 <p><strong>what</strong> The exam will cover:</p>
 <ul>
 <li>All material in Chapters 1-3 of the Gotelli book <em>including matrix population modeling concepts</em>.<br />
 </li>
-<li>All material covered in lectures up to and including this lecture on matrix population models.<br />
+<li>All material covered in lectures, including the following web pages and corresponding lectures and top hat pages:
+<ul>
+<li><a href="LECTURE1.html">Systems thinking and modeling</a></li>
+<li><a href="LECTURE2.html">Exponential growth</a></li>
+<li><a href="LECTURE3.html">Malthus and limits to growth</a></li>
+<li><a href="LECTURE4.html">Logistic population growth</a></li>
+<li><a href="LECTURE5.html">Allee effect</a></li>
+<li><a href="LECTURE6.html">Age-structured populations</a></li>
+<li><a href="LECTURE7.html">Matrix population models</a></li>
+<li>NOTE: all lectures have been recorded and are available via the “Zoom” link on WebCampus in case you missed any or in case you’d like to use these recordings as review/study materials<br />
 </li>
-<li>All material covered in labs 1-4.<br />
-</li>
-<li>Ch. 1 of “Beyond Connecting the Dots” (basic systems thinking and stock-flow modeling, concepts of feedbacks and equilibria)</li>
-<li>Basic programming concepts (IF-THEN-ELSE and iteration loops)</li>
+</ul></li>
+<li>All material covered in labs 1-4, including:
+<ul>
+<li><a href="LAB1.html">Lab 1: exponential growth</a></li>
+<li><a href="LAB2.html">Lab 2: logistic growth</a></li>
+<li><a href="LAB3.html">Lab 3: age-structured populations</a></li>
+<li><a href="LAB4.html">Lab 4: matrix population models</a></li>
+</ul></li>
+<li>Basic programming concepts:
+<ul>
+<li>Conditional logic (IF-THEN-ELSE): see examples in Malthus and Allee effect lectures</li>
+<li>Iteration (‘FOR loops’): see examples in Lab 1 and Lab 4.</li>
+<li>NOTE: you will NOT be tested on how to run population models in R (or how to do anything else in R).</li>
+</ul></li>
 </ul>
-<p><em>The exam will consist of a mixture of multiple-choice and short-answer questions.</em></p>
-<p><em>Please bring a calculator- a regular scientific calculator is fine (not absolutely necessary, but it could be helpful for at least one question on the exam!)</em></p>
+<p><em>The exam will consist of a mixture of multiple-choice and short-answer questions</em></p>
+<p><em>Please bring a calculator- a regular scientific calculator is fine</em></p>
 <p><img src="uncertainty2.jpg" /></p>
 </div>
 <div id="uncertainty" class="section level2">
