--- a/FINAL_PROJECTS.html
+++ b/FINAL_PROJECTS.html
@@ -498,7 +498,7 @@ div.tocify {
 </li>
 <li><strong>Data sources</strong>: Describe one or more information sources you plan to use to guide PVA construction and parameterization (we want to make sure your project is <strong>possible</strong>!)</li>
 </ol>
-<p>The key parameters you will likely need for your PVA model (and will be searching the literature for!) are:</p>
+<p>Some key parameters you will likely need for your PVA model (and will be searching the literature for!) are:</p>
 <ul>
 <li><em>survival rates</em> (usually age-structured)<br />
 </li>
@@ -508,6 +508,7 @@ div.tocify {
 </li>
 <li><em>initial abundance</em><br />
 </li>
+<li><em>mode of population regulation</em> (which vital rates have negative density dependence? Linear or threshold?)</li>
 <li><em>carrying capacity (K)</em> (potentially for multiple subpopulations in a metapopulation!)</li>
 <li><em>dispersal rates</em> (for metapopulation models)</li>
 <li><em>habitat quality</em> (for metapopulation models)</li>
